fix: addressing reviews latest v1