@@ -17,14 +17,12 @@
 
 package org.apache.arrow.memory.util;
 
-import java.util.ArrayList;
+import java.util.ArrayDeque;
 import java.util.Arrays;
+import java.util.Deque;
 
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.slf4j.Logger;
-
-import com.google.errorprone.annotations.FormatMethod;
-import com.google.errorprone.annotations.FormatString;
 
 /**
  * Utility class that can be used to log activity within a class
@@ -33,7 +31,7 @@ import com.google.errorprone.annotations.FormatString;
  */
 public class HistoricalLog {
 
-  private final ArrayList<Event> history = new ArrayList<>();
+  private final Deque<Event> history = new ArrayDeque<>();
   private final String idString; // the formatted id string
   private final int limit; // the limit on the number of events kept
   private @Nullable Event firstEvent; // the first stack trace recorded
@@ -47,8 +45,9 @@ public class HistoricalLog {
    *                       associated with the object instance is best.
    * @param args           for the format string, or nothing if none are required
    */
-  @FormatMethod
-  public HistoricalLog(@FormatString final String idStringFormat, Object... args) {
+  @SuppressWarnings("FormatStringAnnotation")
+  /* Remove @SuppressWarnings after fixing https://github.com/apache/arrow/issues/41951 */
+  public HistoricalLog(final String idStringFormat, Object... args) {
     this(Integer.MAX_VALUE, idStringFormat, args);
   }
 
@@ -70,8 +69,9 @@ public class HistoricalLog {
    *                       associated with the object instance is best.
    * @param args           for the format string, or nothing if none are required
    */
-  @FormatMethod
-  public HistoricalLog(final int limit, @FormatString final String idStringFormat, Object... args) {
+  @SuppressWarnings("AnnotateFormatMethod")
+  public HistoricalLog(final int limit, final String idStringFormat, Object... args) {
+    // Remove @SuppressWarnings after fixing https://github.com/apache/arrow/issues/41951
     this.limit = limit;
     this.idString = String.format(idStringFormat, args);
     this.firstEvent = null;
@@ -85,15 +85,16 @@ public class HistoricalLog {
    * @param noteFormat {@link String#format} format string that describes the event
    * @param args       for the format string, or nothing if none are required
    */
-  @FormatMethod
-  public synchronized void recordEvent(@FormatString final String noteFormat, Object... args) {
+  @SuppressWarnings("AnnotateFormatMethod")
+  public synchronized void recordEvent(final String noteFormat, Object... args) {
+    // Remove @SuppressWarnings after fixing https://github.com/apache/arrow/issues/41951
     final String note = String.format(noteFormat, args);
     final Event event = new Event(note);
     if (firstEvent == null) {
       firstEvent = event;
     }
     if (history.size() == limit) {
-      history.remove(0);
+      history.removeFirst();
     }
     history.add(event);
   }
